Fix: lessons overflow

--- a/static/typer/css/style.css
+++ b/static/typer/css/style.css
@@ -316,6 +316,7 @@ nav img
     height: -webkit-fill-available;
     align-content: flex-start;
     padding: 1rem;
+    overflow: auto;
 }
 
 .btn {
